docsportal/overlays/helpcenter_swiss_internal/components/oauth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docsportal-swiss-internal-oauth-proxy
  namespace: helpcenter-swiss-int
  labels:
    app.kubernetes.io/component: docsportal-swiss-internal-oauth-proxy
spec:
  selector:
    app.kubernetes.io/component: docsportal-swiss-internal-oauth-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
